@@ -175,7 +175,7 @@
 
 <addon id="plugin.video.ZemTV-shani"
        name="ZemTV.com"
-       version="2.4.4"
+       version="2.4.5"
        provider-name="shani">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
